[package]
name = "rattacker"
version = "0.1.0"
authors = ["InnPatron <randomcivvy0121@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
hidapi = "1.2.5"
libc = "0.2.86"

[target.'cfg(windows)'.dependencies]
bindings = { path = "bindings" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
